# image_segmentation

./: CMakeLists.txt  display-universe.h  main.cpp  segment-graph.h  segment-image.h
images/: hall2.ppm  image.ppm  output.ppm
